feat(server/test): create API endpoint to get a party
-get request to this route to get one party
-test API endpoint

[delivers #163504493]

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "An online voting application",
   "main": "source/app.js",
   "scripts": {
-    "start": "npm run build && node ./dist/app.js",
-    "test": "nyc mocha --exit --require babel-core/register",
+    "prestart": "npm run build",
+    "start": "node ./dist/app.js",
+    "test": "nyc mocha --exit --require babel-core/register --timeout 10000",
     "build": "babel source -d dist"
   },
   "repository": {
