--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "prestart": "npm run build",
     "start": "node ./dist/app.js",
-    "test": "nyc mocha --exit --require babel-core/register --timeout 10000",
+    "test": "nyc mocha --exit --require babel-core/register --timeout 30000",
     "build": "babel source -d dist",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
@@ -26,7 +26,9 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "body-parser": "^1.18.3",
-    "express": "^4.16.4"
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
+    "pg": "^7.8.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
