--- a/sample.env
+++ b/sample.env
@@ -1,2 +1,9 @@
 devConnectionString = 'postgres//:jdkjsadkmlsdkfkgqye//'
 testConnectionString = 'postgre//:21kjlfefm35klkg-fkj'
+firstname = 'John' 
+lastname = 'Doe' 
+othername = 'JohnDoe' 
+email = 'John@gmail.com' 
+phoneNumber = '08037891425' 
+passportUrl = 'logo.jpg'  
+password = 'admin';
