fix(bug fix): fix bug with seeding database
- phoneNumber should be an INT not a string

[fixes #163627496]

--- a/sample.env
+++ b/sample.env
@@ -4,6 +4,6 @@ firstname = 'John'
 lastname = 'Doe' 
 othername = 'JohnDoe' 
 email = 'John@gmail.com' 
-phoneNumber = '08037891425' 
+phoneNumber = 8037 
 passportUrl = 'logo.jpg'  
 password = 'admin';
