feat(server/test): create API endpoint for user signup
-user can create an account
-user gets back a token on signup

[delivers #163553291]

--- a/sample.env
+++ b/sample.env
@@ -1,9 +1,10 @@
-devConnectionString = 'postgres//:jdkjsadkmlsdkfkgqye//'
-testConnectionString = 'postgre//:21kjlfefm35klkg-fkj'
-firstname = 'John' 
-lastname = 'Doe' 
-othername = 'JohnDoe' 
-email = 'John@gmail.com' 
+devConnectionString = postgres//:jdkjsadkmlsdkfkgqye//
+testConnectionString = postgre//:21kjlfefm35klkg-fkj
+userSecretKey = yourSecret
+firstname = John 
+lastname = Doe 
+othername = JohnDoe 
+email = John@gmail.com 
 phoneNumber = 8037 
-passportUrl = 'logo.jpg'  
-password = 'admin';
+passportUrl = logo.jpg  
+password = admin
