feat(server/test): create API endpoint for user login
- users can login to their account
- implement authentication with JWT
- secure restricted routes, only authorized user has access

[delivers #163553897 #163628024]

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ services:
   - postgresql
 after_success: npm run coverage
 env:
-  - userSecretKey=openSecret
+  - userSecretKey=openSecret adminSecretKey=adminHasNoSecret
