--- a/sample.env
+++ b/sample.env
@@ -1,6 +1,7 @@
 devConnectionString = postgres//:jdkjsadkmlsdkfkgqye//
 testConnectionString = postgre//:21kjlfefm35klkg-fkj
 userSecretKey = yourSecret
+adminSecretKey = yourAdminSecret
 firstname = John 
 lastname = Doe 
 othername = JohnDoe 
