--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,10 @@
     "extends": "airbnb-base",
     "rules": {
         "linebreak-style": "off",
-        "no-restricted-globals": "off"
+        "no-restricted-globals": "off",
+        "no-plusplus": "off",
+        "no-console": "off",
+        "consistent-return": "off",
+        "no-useless-escape": "off"
     }
 }
